[package]
name = "now-playing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
itertools = "0.14.0"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
windows = { version = "0.61.3", features = ["Data_Xml_Dom", "Foundation_Collections", "Graphics_Imaging", "Media_Control", "Storage_Streams", "UI_Notifications", "Win32", "Win32_Storage_Packaging_Appx", "Win32_System_WinRT"] }
windows-future = "0.2.1"
windows-result = "0.3.4"
windows-strings = "0.4.2"
